--- a/mvp/client/src/app/core/header/header.component.html
+++ b/mvp/client/src/app/core/header/header.component.html
@@ -1,28 +1,12 @@
 <nav class="nav justify-content-between mt-2 mx-2 mb-3">
   <div class="d-flex align-items-center">
-    <strong class="mr-1"><a routerLink="/" class="home-link">Home</a></strong>
-    <strong class="mr-1"><a routerLink="/solutions" class="home-link">Soluções</a></strong>
-    <strong class="mr-1"><a routerLink="/about" class="home-link">Sobre</a></strong>
-    <strong class="mr-1"><a routerLink="/blog" class="home-link">Blog</a></strong>
-    <strong class="mr-1"><a routerLink="/contact" class="home-link">Contato</a></strong>
-    <strong class="mr-1"><a routerLink="/technical-test" class="home-link">Teste</a></strong>
   </div>
   <div class="ml-3">
-    <small *ngIf="auth.loading" class="loading">
-      Logging in...
-    </small>
-    <ng-template [ngIf]="!auth.loading">
+    <ng-template [ngIf]="token.token">
+      <small>{{ token.token.email }}</small>
       <button
-        *ngIf="!auth.loggedIn"
-        class="btn btn-primary btn-sm"
-        (click)="auth.login()">Log In</button>
-      <span *ngIf="auth.loggedIn">
-        <img [src]="auth.userProfile.picture">
-        <small>{{ auth.userProfile.name }}</small>
-        <button
-          class="btn btn-danger btn-sm"
-          (click)="auth.logout()">Log Out</button>
-      </span>
+      class="btn btn-danger btn-sm"
+      (click)="logout()">Log Out</button>
     </ng-template>
   </div>
 </nav>
