--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -1,1 +1,5 @@
 <h1 class="text-center">Technical Test</h1>
+<form (submit)="submiteTechnicalTest()">
+<app-radio-group *ngFor="let question of questionList.questions; let i = index" [question]="question"  [number]="i+1"></app-radio-group>
+<button type="submit" class="btn btn-sucess">Enviar</button>
+</form>
