--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -8,14 +8,14 @@
 }
 
 #logo{
-	width: 200px;
+	width: 180px;
 }
 
 #navBar{
 	margin-left: 5%;
 	margin-right: 10%;
-	margin-top: 5%;
-    margin-bottom: 5%;		
+	margin-top: 3%;
+    margin-bottom: 2%;		
 	border: none;
 	min-height: 80px;
 }
@@ -34,7 +34,7 @@
 
 .navbar-brand {
     float: left;
-    height: 100px;
+    height: 80px;
     padding: 0;
     font-size: 20px;
     line-height: 20px;
@@ -50,7 +50,7 @@
 	font-family: 'Montserrat', sans-serif;
 	font-size: 1.5em;
 	text-align: center;
-	margin-bottom: 5%;
+	margin-bottom: 3%;
 	line-height:5px;
 }
 
@@ -61,6 +61,9 @@
 .itemMenu{
 	text-decoration: none;
 	color: #000;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
 }
 
 #imgBackground{
@@ -68,8 +71,8 @@
 	background-repeat: no-repeat;
     background-position: center;
 	background-size: cover;	
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 #main-title{
@@ -93,39 +96,44 @@
 	width: 100%;
 }
 
-.btnType{
+.btnTest{
     background-color:#ff6a00;
-
     border-radius: none;
     border: 0px;
 
     color: white;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.8em;
+    font-size: 1.2em;
     font-weight: bold;
 	text-transform: uppercase;
 	text-align: center;
+	text-decoration: none;
 	letter-spacing: 3x;
 	display: inline-block;
 
 	width: 100%;
-	padding-bottom: 4%;
-    padding-top: 4%;
-    padding-left: 6%;
-	padding-right: 6%;
+	padding-bottom: 3%;
+    padding-top: 3%;
+    padding-left: 5%;
+	padding-right: 5%;
+	margin-top: 5%;
 }
 
-.btnType:hover {
-  	background-color:#ff6a00;
-  	outline: none;
+.btnTest:hover {
+	background-color:#ff6a00;
+	color: #fff;
+	outline: none;	
+	text-decoration: none;	  
 }
 
-.btnType:active {
-  	outline: none;
+.btnTest:active {
+	outline: none;
+	text-decoration: none;	  
 }
 
-.btnType:focus {
-  	outline: none;
+.btnTest:focus {
+	outline: none;
+	text-decoration: none;
 }
 
 #imgBtn{
@@ -139,7 +147,6 @@ h1{
 	font-size: 1.8em;
 	line-height: 30px;
 	margin-left: 0;
-	
 }
 
 h2{
@@ -161,10 +168,10 @@ h2{
 
 h3{
 	font-family: 'Raleway', sans-serif;
-	font-size: 1.3em;
+	font-size: 1.4em;
 	line-height: 25px;	
-	margin: 10%;
 	margin-left: 0;
+	margin-right: 0;
 	margin-bottom: 5%;
 }
 
@@ -212,21 +219,106 @@ h3{
 }
 
 .confLogoFooter1{
-	width: 200px;
+	width: 100px;
+	height: 50px;
 }
 
 .confLogoFooter2{
-	width: 50px;
+	width: 30px;
 }
 
 .main-footer{
-	display:flex;
-	justify-content: space-between;
 	background-color: #f9f9f9;
-	padding: 5%;
+	padding: 2%;
+	vertical-align: middle;
 }
+
+#gif{
+	width: 80%;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.ajustText{
+	padding-left: 3%;
+	padding-right: 3%;
+}
+
 /*Mobile Style*/
 
-@media(max-with: 768px){	
+@media only screen and (min-device-width: 768px){
+	#logo{
+		width: 220px;
+	}
+	
+	#imgBackground{
+		padding-bottom: 5%;
+		padding-top: 5%;
+	}
 
+	.navbar-nav{
+		float: right;
+	}
+
+	.itemMenu{
+		font-size: 1.3em;
+		font-weight: bolder;
+		text-transform: uppercase;
+	}
+
+	#menuItens{
+		margin-bottom: 1%;
+	}
+
+	#main-title{
+		margin-bottom: 7%;
+	}
+
+	h1{
+		font-size: 3em;
+		line-height: 55px;
+	}
+
+	h2{
+		font-size:2em;
+	}
+	
+	h3{
+		font-size:1.5em;
+	}
+
+	#imgQuemSomos{
+		width: 100%;
+	}
+
+	#QuemSomos{
+		margin-top: 5%;
+	}
+
+	#OQueFazemos{
+		margin-top: 5%;
+		padding-top: 5%;
+		padding-bottom: 5%;
+		background-color: #f5f5f5;
+	}
+
+	#formQuestions{
+		padding-top: 5%;
+		padding-bottom: 5%;
+	}
+
+	.confLogoFooter1{
+		width: 200px;
+		height: 100px;
+	}
+	
+	.confLogoFooter2{
+		width: 50px;
+	}
+
+	#gif{
+		width: 100%;
+		text-align: center;
+		margin-bottom: 20px;
+	}
 }
