--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -1,7 +1,6 @@
 .row{
 	margin-left: 0;
 	margin-right: 0;
-
 }
 
 #nameEmailInfo, #btnSummit{
@@ -14,16 +13,22 @@
 }
 
 #logo{
-	width: 180px;
+	width: 120px;
+	margin-top:10%;
+}
+
+.nav {
+    font-size: 12px;
+    margin-top: 1% !important;    
 }
 
 #navBar{
 	margin-left: 5%;
 	margin-right: 10%;
-	margin-top: 3%;
-    margin-bottom: 2%;		
+	margin-top: 1.5%;
+    margin-bottom: 0;		
+	min-height: 0;	
 	border: none;
-	min-height: 80px;
 }
 
 .navbar-toggle {
@@ -43,7 +48,8 @@
     height: 80px;
     padding: 0;
     font-size: 20px;
-    line-height: 20px;
+	line-height: 20px;
+    margin-bottom: 20px;	
 }
 
 .navbar-default {
@@ -61,7 +67,8 @@
 }
 
 #imgMenu{
-	width: 50px;
+    position: absolute;
+    margin-left: -20px;
 }
 
 .itemMenu{
@@ -142,6 +149,12 @@
 	text-decoration: none;
 }
 
+.col-xs-offset-2 {
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
+
 #imgBtn{
 	width: 50px;
 }
@@ -174,8 +187,8 @@ h2{
 
 h3{
 	font-family: 'Raleway', sans-serif;
-	font-size: 1.4em;
-	line-height: 25px;	
+    font-size:18px;
+	line-height: 22px;	
 	margin-left: 0;
 	margin-right: 0;
 	margin-bottom: 5%;
@@ -224,6 +237,10 @@ h3{
 	color: #000 !important;
 }
 
+.colorWord {
+    color: #c3c3c3;
+}
+
 .confLogoFooter1{
 	width: 100px;
 	height: 50px;
@@ -253,7 +270,8 @@ h3{
 
 @media only screen and (min-device-width: 768px){
 	#logo{
-		width: 220px;
+	    width: 120px;
+	    margin-top: 0;
 	}
 	
 	#imgBackground{
@@ -272,6 +290,10 @@ h3{
 	}
 
 	#menuItens{
+        font-size: 12px;
+        position: absolute;
+        right: 0;
+        top: 5%;		
 		margin-bottom: 1%;
 	}
 
@@ -280,8 +302,8 @@ h3{
 	}
 
 	h1{
-		font-size: 3em;
-		line-height: 55px;
+        font-size: 30px;
+        line-height: 45px;
 	}
 
 	h2{
@@ -289,7 +311,7 @@ h3{
 	}
 	
 	h3{
-		font-size:1.5em;
+		font-size:16px;
 	}
 
 	#imgQuemSomos{
