Implemented the partial exhibition of questions

--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -1,9 +1,18 @@
+<ng-template [ngIf]="position > 0">
+    <div class="btn-back">
+        <div class="text-back" (click)="back()">VOLTAR</div>
+    </div>
+</ng-template>
+
 <app-progress-bar [position]="position" [total]="questionList.questions.length"></app-progress-bar>
 <form (submit)="submiteTechnicalTest()">
     <app-radio-group *ngFor="let question of questionList.questions; let i = index" 
         [question]="question"  
         [number]="i+1"
+        [visible]="i == position"
         (selected)="selectionChanged()">
     </app-radio-group>
-    <button type="submit" class="btn btn-sucess">Enviar</button>
+    <ng-template [ngIf]="position == questionList.questions.length - 1">
+      <button type="submit" class="btn btn-sucess">Enviar</button>
+    </ng-template>
 </form>
