--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
@@ -1,4 +1,6 @@
-<h2>{{ number + ') ' + question.question }}</h2>
-<div [class]="question.style">
+<div class="{{visible ? 'd-block' : 'd-none'}}">
+    <h2>{{ number + ') ' + question.question }}</h2>
+    <div [class]="question.style">
+    </div>
+    <app-radio *ngFor="let option of question.options" [option]="option" (selected)="selectedChanged($event)" class="d-block"></app-radio>
 </div>
-<app-radio *ngFor="let option of question.options" [option]="option" (selected)="selectedChanged($event)" class="d-block"></app-radio>
