--- a/mvp/client/src/app/login/login/login.component.html
+++ b/mvp/client/src/app/login/login/login.component.html
@@ -1,14 +1,31 @@
-<h1 class="text-center">Login</h1>
-<form #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" [(ngModel)]="model.email" #email="ngModel" name="email"
-          class="form-control" id="email" placeholder="Digite o email" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Senha</label>
-        <input type="password" [(ngModel)]="model.password" #password="ngModel" name="password"
-          class="form-control" id="password" placeholder="Senha" required>
-      </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+<div id="header">
+    <ul id="headerAlign" class="container">
+        <img src="img/logo-svg-branca.svg" id="logo">
+        <h2 id="login">Login</h2>
+    </ul>
+</div>
+
+<body>
+    <div id="ImageBack">
+        <div id="sectionForm" class="row">
+            <div class="boxLogin container">
+                <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" [(ngModel)]="model.email" #email="ngModel" name="email"
+                        class="form-control" id="email" placeholder="Digite o email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Senha</label>
+                        <input type="password" [(ngModel)]="model.password" #password="ngModel" name="password"
+                        class="form-control" id="password" placeholder="Senha" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Entrar</button>       
+                    <div>
+                        <h4>Já cadastrou o seu email?<a href="https://hrtechsolutions.com.br/"> Não</a></h4>
+                    </div>                                
+                </form>
+            </div>
+        </div>
+    </div>       
+</body>
