--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
@@ -1,4 +1,14 @@
-<h2>{{ number + ') ' + question.question }}</h2>
-<div [class]="question.style">
+<div class="row">
+    <div class="col-md-6">
+        <h2>{{ number + ') ' + question.question }}</h2>
+        <div [class]="question.style"></div>
+    </div>
+
+    <div class="col-md-6">
+
+
+        <div id="confBox">
+        <app-radio *ngFor="let option of question.options" [option]="option" (selected)="selectedChanged($event)" class="d-block"></app-radio>
+        </div>
+    </div>   
 </div>
-<app-radio *ngFor="let option of question.options" [option]="option" (selected)="selectedChanged($event)" class="d-block"></app-radio>
