--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="question">
     <div class="col-md-6">
         <h2>{{ number + ') ' + question.question }}</h2>
         <div [class]="question.style"></div>
