--- a/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
+++ b/mvp/client/src/app/radio-group/radio-group/radio-group.component.html
@@ -1,6 +1,12 @@
-<div class="{{visible ? 'd-block' : 'd-none'}}">
-    <h2>{{ number + ') ' + question.question }}</h2>
-    <div [class]="question.style">
+<div class="{{visible ? 'd-flex' : 'd-none'}} questions">
+    <div class="question">
+        <h2>{{ number + ') ' + question.question }}</h2>
+        <div [class]="question.style"></div>
     </div>
-    <app-radio *ngFor="let option of question.options" [option]="option" (selected)="selectedChanged($event)" class="d-block"></app-radio>
+    <div class="options">
+        <app-radio *ngFor="let option of question.options" 
+            [option]="option" 
+            (selected)="selectedChanged($event)" 
+            class="d-block"></app-radio>
+    </div>
 </div>
