--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.html
@@ -9,10 +9,41 @@
     <app-radio-group *ngFor="let question of questionList.questions; let i = index" 
         [question]="question"  
         [number]="i+1"
-        [visible]="i == position"
+        [visible]="groupVisible(i)"
         (selected)="selectionChanged()">
     </app-radio-group>
-    <ng-template [ngIf]="position == questionList.questions.length - 1">
-      <button type="submit" class="btn btn-sucess">Enviar</button>
+
+    <ng-template [ngIf]="position == questionList.questions.length">
+      <div style="
+        max-width: 470px;
+        display: inline-block;
+        margin:  auto;
+        margin:  0 20px;
+    "><img src="https://i.imgur.com/A3n1cOA.jpg" style="
+        width:  100%;
+    "></div><h2 style="
+        width: fit-content;
+        margin:  auto;
+        padding: 10px 40px;
+        box-shadow: inset 0px 0px 21px -7px black;
+        font-size:  16px;
+        display:  inline-block;
+    "><div style="
+        display: inline-block;
+        vertical-align: middle;
+        padding: 10px 60px 10px 0px;
+        text-align: right;
+        max-width: 320px;
+    ">Pronto! Agradecemos pela participação e até em breve.</div><div style="
+        display: inline-block;
+        vertical-align:  middle;
+        width:  110px;
+        margin:  auto;
+    
+        ">
+    <button _ngcontent-c1="" class="btn btn-sucess" type="submit" style="padding: 5px 30px;background-color: #41ffae;color: white;font-weight: 600;">Enviar</button></div></h2><div style="
+        width:  300px;
+        height: 220px;
+    "></div>
     </ng-template>
 </form>
