--- a/mvp/client/src/app/core/header/header.component.html
+++ b/mvp/client/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="nav justify-content-between mt-2 mx-2 mb-3">
+<nav class="nav justify-content-between mb-3 header">
   <div class="d-flex align-items-center">
   </div>
   <div class="ml-3">
