--- a/mvp/client/src/app/progress-bar/progress-bar/progress-bar.component.css
+++ b/mvp/client/src/app/progress-bar/progress-bar/progress-bar.component.css
@@ -1,10 +1,10 @@
 .progress-bar{
     display: inline-block;
     vertical-align: middle;
-    width: 87%;
+    width: 100%;
     background-color:  #efefef;
-    background: linear-gradient(141deg, white 0%, #4299F4 76%);
-    margin: 0 0 0 3%;
+    background: linear-gradient(141deg, lightgreen 0%, darkgreen 76%);
+    margin: 0;
     border-radius: 5px;
     border-top: 1px solid #d6d6d6;
     border-left: 1px solid #dedede;
@@ -15,8 +15,7 @@
 .progress-bar .progress-bar-item{
     height: 30px;
     width: 8.33%;
-    background-color: blueviolet;
-    background: linear-gradient(141deg, blueviolet 0%, #4299F4 76%);
+    background-color: transparent;
     transition: ease-in-out 0.3s;
     border-radius: 5px;
     text-align: center;
@@ -25,11 +24,4 @@
     font-weight:  900;
     box-shadow: 2px 2px 12px 0px #000085;
     display: inline-block;
-}
-
-.scheduled-time{
-    width: 100%;
-    margin-top: 10px;
-    border-radius: 5px;
-    text-align: center;
 }
