--- a/mvp/client/src/app/radio/radio/radio.component.html
+++ b/mvp/client/src/app/radio/radio/radio.component.html
@@ -1,8 +1,10 @@
-<label>
-         <input type='radio' 
-            #myRadio
-            [name]="option.group"  
-            [value]="option.value"
-            (click)="onRadioClicked(myRadio)">
-    {{option.text}} 
-</label>
+<div class="radio-container">
+    <label>
+            <input type='radio' 
+                #myRadio
+                [name]="option.group"  
+                [value]="option.value"
+                (click)="onRadioClicked(myRadio)">
+        {{option.text}} 
+    </label>
+</div>
