--- a/mvp/client/src/app/login/login/login.component.html
+++ b/mvp/client/src/app/login/login/login.component.html
@@ -1,6 +1,7 @@
 <div id="header">
     <ul id="headerAlign" class="container">
-        <img src="img/logo-branca.png" id="logo">
+        <div id="logo">
+        </div>        
         <h2 id="login">Login</h2>
     </ul>
 </div>
