--- a/mvp/client/src/app/technical-test/technical-test/technical-test.component.css
+++ b/mvp/client/src/app/technical-test/technical-test/technical-test.component.css
@@ -1,3 +1,8 @@
+row{
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .btn-back{
     display:  inline-block;
     vertical-align: middle;
@@ -18,12 +23,14 @@
 .scheduled-time{
     width: 100%;
     margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 5px;
     text-align: center;
 }
 
 .progress-container{
     width: 90%;
+    margin-left: 10px;
 }
 
 .btn-back,
@@ -35,11 +42,12 @@
     display: flex;
     flex-wrap: wrap;
     flex-flow: row-reverse;
+    margin-top:7%;
 }
 
 .container-questions{
     display: flex;
-    height: 100%;
+    height: 90%;
     align-items: center;
     align-content: center;
     max-width: 1000px;
@@ -56,25 +64,10 @@
 .thanks-title{
     width: fit-content;
     margin:  auto;
-    padding: 10px 40px;
+    padding: 30px 40px;
     box-shadow: inset 0px 0px 21px -7px black;
     font-size:  16px;
     display:  inline-block;
-}
-
-.thanks-title-container{
-    display: inline-block;
-    vertical-align: middle;
-    padding: 10px 60px 10px 0px;
-    text-align: right;
-    max-width: 320px;
-}
-
-.thanks-btn-container{
-    display: inline-block;
-    vertical-align:  middle;
-    width:  110px;
-    margin:  auto;
 }
 
 .thanks-btn{
@@ -87,8 +80,13 @@
     flex-flow: row;
 }
 
-@media(max-width: 768px) {
+@media only screen and (max-device-width: 768px) {
     .message-container{
         flex-flow: column;
     }
+
+    .container-questions{
+        height: 70%;
+    }
+    
 }
