--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -1,18 +1,21 @@
-<header>
-    <div id="logoSection" class="container">
-        <img id="logo" src="../../../assets/images/hr-logo.png" alt="HRtechSolutions">
-    </div>
-</header>
-
-<section class="container">
-    <div class="row">        
-        <div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8">       
-            <h1>Muito obrigado por participar do nosso teste! </h1>
-            <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
-            <h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
+<body>
+    <header>
+        <div id="logoSection" class="container">
+            <img id="logo" src="../../../assets/images/hr-logo.png" alt="HRtechSolutions">
         </div>
-    </div>
-        <div id="gif"> 		
-            <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif">
+    </header>
+    
+    <section>
+        <div class="row">        
+            <div>       
+                <h1>Muito obrigado por participar do nosso teste! </h1>
+                <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
+                <h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
+            </div>
+        
+            <div id="gif"> 		
+                <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif">
+            </div> 
         </div>    
-</section>
+    </section>
+</body>
