--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.css
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.css
@@ -1,7 +1,10 @@
 .row{
 	margin-left: 0;
 	margin-right: 0;
+}
 
+body{
+	min-width: 100%;
 }
 
 #logoSection{
@@ -17,15 +20,15 @@ h1{
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bolder;
 	color: #00cca3;
-	font-size: 1.8em;
+	font-size: 1.5em;
 	line-height: 30px;
-	margin-left: 0;
+	margin: 2%;
 }
 
 h2{
 	font-family: 'Raleway', sans-serif;
 	color: #FFF;
-	font-size: 1.4em; 
+	font-size: 1.3em; 
 	line-height: 30px;
 	margin-left: 0;	  
 }
@@ -34,15 +37,14 @@ h3{
 	font-family: 'Raleway', sans-serif;
 	font-size: 1.4em;
 	line-height: 25px;	
-	margin-left: 0;
-	margin-right: 0;
-	margin-bottom: 5%;
+	margin: 2%;
 }
 
 #gif{
-	width: 80%;
+	width: fit-content;
 	text-align: center;
 	margin-bottom: 20px;
+	flex-shrink: 1;
 }
 
 /*Mobile Style*/
