--- a/mvp/client/src/app/login/login/login.component.css
+++ b/mvp/client/src/app/login/login/login.component.css
@@ -10,7 +10,8 @@ row{
 #header{
     background-color: #000;
     justify-content: space-around;   
-    height: 12%;
+    height: 15%;
+    vertical-align: middle;
     padding-top: 2%;
     padding-bottom: 2%;
 }
@@ -18,13 +19,13 @@ row{
 #headerAlign{
     display: flex;
     justify-content: space-between;
+    vertical-align: middle;
+    padding-bottom: 0;
 }
 
 #logo{
-    background-image: url("../img/logo-branca.png");
     justify-content: start;
-	background-repeat: no-repeat;
-    background-position: center;   
+    width: 100px;
 }
 
 #login{
@@ -33,8 +34,9 @@ row{
     text-align: end;
     font-family: Arial;
     vertical-align: middle;
-
+    margin-top: 11px;    
 }
+
 #ImageBack{
     background-image: url("../img/login-bg.jpg");
     min-height: 80%;
