--- a/mvp/client/src/app/login/login/login.component.html
+++ b/mvp/client/src/app/login/login/login.component.html
@@ -1,7 +1,6 @@
 <div id="header">
     <ul id="headerAlign" class="container">
-        <div id="logo">
-        </div>        
+        <a href="#"><img id="logo" src="assets\images\logo-branca.png" alt="HRtechSolutions"></a>      
         <h2 id="login">Login</h2>
     </ul>
 </div>
