--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -7,15 +7,33 @@
     
     <section>
         <div class="row">        
-            <div>       
+            <div class="col-md-12 MarginTop">        
                 <h1>Muito obrigado por participar do nosso teste! </h1>
-                <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>      
+
+                <div class="row">
+                    <div class="col-md-3 col-sm-1 col-xs-1"></div>
+                    <div id="msgScore" class="col-md-6 col-sm-10 col-xs-10">
+                        <h2>Seu resultado foi:</h2>                   
+                        <label id="scoreMessage">{{message}}</label>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>  
+                <br/>    
                 <h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
             </div>
         
-            <div id="gif"> 		
+            <div id="gif" class="col-md-12 MarginTop"> 		
                 <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif">
             </div> 
+
+            <div class="col-md-12 MarginTop"> 
+                <a href="https://hrtechsolutions.com.br/" id="backHomePage">Ir para a homepage</a>
+            </div>
         </div>    
     </section>
+
+
 </body>
