--- a/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
+++ b/mvp/client/src/app/thank-you/thank-you/thank-you.component.html
@@ -1,39 +1,55 @@
 <body>
+
     <header>
         <div id="logoSection" class="container">
             <img id="logo" src="../../../assets/images/hr-logo.png" alt="HRtechSolutions">
         </div>
     </header>
+
     
     <section>
-        <div class="row">        
-            <div class="col-md-12 MarginTop">        
-                <h1>Muito obrigado por participar do nosso teste! </h1>
-
-                <div class="row">
-                    <div class="col-md-3 col-sm-1 col-xs-1"></div>
-                    <div id="msgScore" class="col-md-6 col-sm-10 col-xs-10">
-                        <h2>Seu resultado foi:</h2>                   
-                        <label id="scoreMessage">{{message}}</label>
-                    </div>
+        <div id="main-section" class="container-fluid">
+            <div class="row">        
+                <div class="col-md-12 col-sm-12 col-xs-12 MarginTop">        
+                    <h1>Muito obrigado por participar do nosso teste! </h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12 MarginTop">
+                    <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>  
+                    <br/>    
+                    <h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
                 </div>
             </div>
 
-            <div>
-                <h3>Já deu para perceber que você é um profissional de Vendas que corre atrás porque está interessado em avaliar seus conhecimentos. Continuando neste caminho você terá tantos clientes que vai parecer ter mais sucesso que o Jerry Maguire.</h3>  
-                <br/>    
-                <h3>P.S: Lembre-se não se trata apenas de uma venda, um cliente satisfeito é um cliente fiel!</h3>
-            </div>
-        
-            <div id="gif" class="col-md-12 MarginTop"> 		
-                <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif">
-            </div> 
+            <div class="row MarginTop alignSection">
+                <div id="gif" class="col-lg-6 col-md-12 col-sm-12 col-xs-12 MarginTop"> 		
+                    <img src="../../../assets/images/Jerry Maguire Money GIF-downsized_large.gif">
+                </div> 
 
-            <div class="col-md-12 MarginTop"> 
-                <a href="https://hrtechsolutions.com.br/" id="backHomePage">Ir para a homepage</a>
-            </div>
-        </div>    
+                <div id="msgScore" class="col-lg-6 col-md-12 col-sm-12 col-xs-12 MarginTop">
+                    <h2>Seu resultado foi:</h2>                   
+                    <label id="scoreMessage">{{message}}</label>
+                </div>
+            </div>    
+
+            <div class="row MarginTop">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 MarginTop"> 
+                    <a href="https://hrtechsolutions.com.br/" id="backHomePage">Ir para a homepage</a>
+                </div>
+            </div>  
+        </div>  
     </section>
-
-
 </body>
+
+
+<footer>
+    <div class="row main-footer">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <img src="assets\images\hr-logo.png" class="confLogoFooter1">
+            <a href="https://www.facebook.com/HRTechSolutionsOficial/" target="_blank"><img src="assets\images\Facebook.svg" class="confLogoFooter2"></a>
+            <a href="https://www.linkedin.com/company/11561051/" target="_blank"><img src="assets\images\LinkedIn.svg" class="confLogoFooter2"></a>
+        </div>
+    </div>
+</footer>
